--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,7 @@
        margin-left: auto;
        box-shadow: 2px 2px;
        padding-bottom: 4rem;
+       margin-bottom: 7rem;
        flex: 1;
     }
     input{
